inject/vscode-frosted-glass-theme.css
/* just define css variables */
/* change those variables into whatever you like */
body {
    --backdrop-filter: blur(8px) saturate(0.8);
    --background-color: rgba(255, 255, 255, 0.4);
    --transition: 300ms;
}

/* Title Bar */
.window-title {
    transition: var(--transition);
}

.window-icon {
    transition: var(--transition);
}

/* Action Label */
.action-label.codicon {
    transition: var(--transition);
}

/* Editor Panel */
.monaco-hover {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.suggest-details {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.monaco-editor .tree {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.monaco-editor .details {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.editor-widget.suggest-widget {
    backdrop-filter: none;
    background-color: transparent !important;
}

/* Command Panel */
.quick-input-widget {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.monaco-list-rows {
    background-color: transparent !important;
}

.monaco-list-rows .monaco-list-row {
    outline: none !important;
}

/* Input Box */
.monaco-inputbox.idle {
    background-color: transparent !important;
}

.monaco-inputbox.idle .wrapper {
    background-color: transparent;
}

.monaco-inputbox.idle .mirror {
    background-color: transparent;
}

/* Menu */
.monaco-menu .monaco-action-bar {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.monaco-scrollable-element {
    background-color: transparent !important;
}

/* Search & Replace */
.editor-widget {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

/* Notification Panel */
.notifications-center-header {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.notifications-list-container {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

.notification-toast {
    background-color: transparent !important;
    transition: var(--transition);
}

/* Feedback Form */
.feedback-form {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

/* Minimap */
.minimap {
    backdrop-filter: var(--backdrop-filter);
}

.minimap canvas {
    opacity: 0.4;
    transition: var(--transition);
}

.minimap:hover canvas {
    opacity: 1;
    transition: var(--transition);
}

/* Scroll Bar */
.slider {
    backdrop-filter: var(--backdrop-filter);
}

/* Setting Page */
.setting-item-contents.settings-row-inner-container {
    transition: var(--transition);
}

/* Breadcrumbs Picker */
.monaco-breadcrumbs-picker > div:nth-child(2) {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

/* Debug Tool Bar */
.debug-toolbar {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

/* Debug Hover Widget */
.debug-hover-widget {
    backdrop-filter: var(--backdrop-filter);
    background-color: var(--background-color) !important;
}

